fix header bug on safari

--- a/styles/header.module.scss
+++ b/styles/header.module.scss
@@ -64,6 +64,8 @@
     }
 
     &_links {
+      display: flex;
+
       a {
         text-decoration: none;
         margin: 0 16px;
